ABLE TO CHANGE INP FILE OUTPUT (see line 111 in FiberFunctions.py)

--- a/Documentation/files/Automate_Abaqus-py.html
+++ b/Documentation/files/Automate_Abaqus-py.html
@@ -12,10 +12,23 @@
  <div class="CTitle">Functions</div>
 </div>
 
-<a name="analysis_was_successful"></a><a name="Topic224"></a><div class="CTopic TFunction LPython last">
+<a name="analysis_was_successful"></a><a name="Topic224"></a><div class="CTopic TFunction LPython">
  <div class="CTitle">analysis_was_successful</div>
  <div id="NDPrototype224" class="NDPrototype WideForm"><div class="PSection PParameterSection CStyle"><table><tr><td class="PBeforeParameters"><span class="SHKeyword">def</span> analysis_was_successful(</td><td class="PParametersParentCell"><table class="PParameters"><tr><td class="PName first last">file_name</td></tr></table></td><td class="PAfterParameters">)</td></tr></table></div></div>
  <div class="CBody"><div class="CHeading">Parameters</div><table class="CDefinitionList"><tr><td class="CDLEntry">file_name</td><td class="CDLDefinition"><p>Name of the given file</p></td></tr></table><p>This function checks the INP file to see if the run was completed successfully or not</p></div>
+</div>
+
+<a name="Notes"></a><a name="Topic227"></a><div class="CTopic TSection LPython">
+ <div class="CTitle">Notes</div>
+</div>
+
+<a name="Information"></a><a name="Topic225"></a><div class="CTopic TGroup LPython">
+ <div class="CTitle">Information</div>
+</div>
+
+<a name="Command_Center_of_program,run_this_file_to_generate_INP_files"></a><a name="Topic226"></a><div class="CTopic TInformation LPython last">
+ <div class="CTitle">Command Center of program, run this file to generate INP files</div>
+ <div class="CBody"><p>which will use the functions in &lt;generateINP.py&gt;</p></div>
 </div>
 
 </body></html>
