ABLE TO CHANGE INP FILE OUTPUT (see line 111 in FiberFunctions.py)(repush)

--- a/Documentation/files/lib/ConnectingTissue-py.html
+++ b/Documentation/files/lib/ConnectingTissue-py.html
@@ -41,10 +41,10 @@
  <div class="CBody"><p>to keep legacy code working, might not be needed, comment it out and see if the code breaks :)</p></div>
 </div>
 
-<a name="ConnectingTissue.fibers"></a><a name="Topic194"></a><div class="CTopic TFunction LPython">
+<a name="ConnectingTissue.fibers"></a><a name="Topic182"></a><div class="CTopic TFunction LPython">
  <div class="CTitle">fibers</div>
- <div id="NDPrototype194" class="NDPrototype WideForm"><div class="PSection PParameterSection CStyle"><table><tr><td class="PBeforeParameters"><span class="SHKeyword">def</span> fibers(</td><td class="PParametersParentCell"><table class="PParameters"><tr><td class="PName first last">self</td></tr></table></td><td class="PAfterParameters">)</td></tr></table></div></div>
- <div class="CBody"><p>returns: a list(list(Points)) example: the first Node of the first fiber x = value[0][0][0] y = value[0][0][1] z = value[0][0][2] a 3d array of the fibers with coordinate values as opposed to fiber_keys which is a 2d array that contians lists of indexes</p></div>
+ <div id="NDPrototype182" class="NDPrototype WideForm"><div class="PSection PParameterSection CStyle"><table><tr><td class="PBeforeParameters"><span class="SHKeyword">def</span> fibers(</td><td class="PParametersParentCell"><table class="PParameters"><tr><td class="PName first last">self</td></tr></table></td><td class="PAfterParameters">)</td></tr></table></div></div>
+ <div class="CBody"><p>returns: a list(list(Points)) example: the first Node of the first fiber x = value[0][0][0] y = value[0][0][1] z = value[0][0][2] a 3d array of the fibers with coordinate values as opposed to fiber_keys which is a 2d array that contains lists of indexes</p></div>
 </div>
 
 <a name="ConnectingTissue.get_ends_of_fibers"></a><a name="Topic195"></a><div class="CTopic TFunction LPython">
