--- a/Documentation/files/lib/FiberFunctions-py.html
+++ b/Documentation/files/lib/FiberFunctions-py.html
@@ -55,9 +55,10 @@
  <div class="CBody"><p>returns: average length of a fiber (since it may have multiple &quot;lines&quot;)</p></div>
 </div>
 
-<a name="getFiberLengths"></a><a name="Topic182"></a><div class="CTopic TFunction LPython">
+<a name="getFiberLengths"></a><a name="Topic228"></a><div class="CTopic TFunction LPython">
  <div class="CTitle">getFiberLengths</div>
- <div id="NDPrototype182" class="NDPrototype WideForm"><div class="PSection PParameterSection CStyle"><table><tr><td class="PBeforeParameters"><span class="SHKeyword">def</span> getFiberLengths(</td><td class="PParametersParentCell"><table class="PParameters"><tr><td class="PName first last">inputfile,</td></tr><tr><td class="PName first last">fibers</td></tr></table></td><td class="PAfterParameters">)</td></tr></table></div></div>
+ <div id="NDPrototype228" class="NDPrototype WideForm"><div class="PSection PParameterSection CStyle"><table><tr><td class="PBeforeParameters"><span class="SHKeyword">def</span> getFiberLengths(</td><td class="PParametersParentCell"><table class="PParameters"><tr><td class="PName first last">inputfile,</td></tr><tr><td class="PName first last">fibers</td></tr></table></td><td class="PAfterParameters">)</td></tr></table></div></div>
+ <div class="CBody"><p>Calls <a href="../../index.html#File:lib/FiberFunctions.py:getFiberLength" target="_top" onmouseover="NDContentPage.OnLinkMouseOver(event,181);" onmouseout="NDContentPage.OnLinkMouseOut(event);" >getFiberLength</a> n number of times, when n is the number of elements in the given fibers array</p></div>
 </div>
 
 <a name="CurvePARAFibersInINP"></a><a name="Topic183"></a><div class="CTopic TFunction LPython last">
