Update before main changes after Feb 24

--- a/Documentation/files/lib/FiberFunctions-py.html
+++ b/Documentation/files/lib/FiberFunctions-py.html
@@ -28,9 +28,9 @@
  <div class="CBody"><p>Gets the points that link the AVW to CL Assumes data comes after &quot;Weld,\n*Element, type=CONN3D2&quot; The lines look like this &quot;3, OPAL325_AVW_v6-1.14, OPAL325_Para_v6-1.15&quot;</p><p>Currently used with tis1 being the Fiber and tis2 being the AVW</p></div>
 </div>
 
-<a name="CurveFibersInINP"></a><a name="Topic177"></a><div class="CTopic TFunction LPython">
+<a name="CurveFibersInINP"></a><a name="Topic194"></a><div class="CTopic TFunction LPython">
  <div class="CTitle">CurveFibersInINP</div>
- <div id="NDPrototype177" class="NDPrototype WideForm"><div class="PSection PParameterSection CStyle"><table><tr><td class="PBeforeParameters"><span class="SHKeyword">def</span> CurveFibersInINP(</td><td class="PParametersParentCell"><table class="PParameters"><tr><td class="PName first last">Part_Name1,</td></tr><tr><td class="PName first last">Part_Name2,</td></tr><tr><td class="PName first last">scale,</td></tr><tr><td class="PName first last">inputFile,</td></tr><tr><td class="PName first last">outputFile,</td></tr><tr><td class="PName first last">dirVector</td></tr></table></td><td class="PAfterParameters">)</td></tr></table></div></div>
+ <div id="NDPrototype194" class="NDPrototype WideForm"><div class="PSection PParameterSection CStyle"><table><tr><td class="PBeforeParameters"><span class="SHKeyword">def</span> CurveFibersInINP(</td><td class="PParametersParentCell"><table class="PParameters"><tr><td class="PName first">Part_Name1,</td><td></td><td class="last"></td></tr><tr><td class="PName first">Part_Name2,</td><td></td><td class="last"></td></tr><tr><td class="PName first">scale,</td><td></td><td class="last"></td></tr><tr><td class="PName first">inputFile,</td><td></td><td class="last"></td></tr><tr><td class="PName first">outputFile,</td><td></td><td class="last"></td></tr><tr><td class="PName first">dirVector,</td><td></td><td class="last"></td></tr><tr><td class="PName first">updatedP</td><td class="PDefaultValueSeparator">&nbsp;=&nbsp;</td><td class="PDefaultValue last"><span class="SHKeyword">None</span></td></tr></table></td><td class="PAfterParameters">)</td></tr></table></div></div>
  <div class="CBody"><p>This function takes the apical supports (or other fibers), finds the attachment points, and tries to make them a certain length</p></div>
 </div>
 
